--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         		<img src="images/logo.png">
   			</div>
 			<div class="title">
-        		<h1 id="first" class="fadeInAnimated" >Welcome to CIV</h1>
+        		<h1 id="first" class="fadeInAnimated" >Welcome to CGC</h1>
         		<p  class="sub">
         			<sub id="second" class="fadeInAnimated">Follow us into the future.
         			</sub>
