--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CGC</title>
+		<title>Columbia Global Capital</title>
 		<meta charset="UTF-8">
+		<link rel="icon" href="images/icon.png">
 		<meta name="viewport" content="width=device-width, initial scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
